@@ -84,6 +84,12 @@ static int Entity_NPC::FindTargetPit(Vector* Pos1, Vector* Pos2, unsigned int Pi
 "558bec6aff68????????64a1????????5081eca400000053":
 __thiscall bool Entity_NPC::TrySplit(float defaultDamage<xmm1>, EntityRef * source, bool doScreenEffects);
 
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ecf8000000a1????????33c58945??5657508d45??64a3????????8bf989bd????????33f6":
+__thiscall void Entity_NPC::load_graphics(bool param_1);
+
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505383ec40a1????????33c58945??5657508d45??64a3????????8bf18b43":
+__thiscall void Entity_NPC::translate_gfx_path(std_string& returnString, std_string& input);
+
 /*
 // Minecart functions
 "558bec51538bd98b8b":
